@@ -135,15 +135,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
           http://svn.apache.org/viewcvs?rev=395079&view=rev 
        +1: colm, wrowe, niq
 
-    *) mod_proxy: Fix PR 11971 (HTTP proxy header "Via" with wrong hostname
-                  if ServerName not set or UseCanonicalName Off) by
-                  backporting r102320.
-        Trunk version of patch:
-          http://svn.apache.org/viewcvs?rev=102320&view=rev
-        2.0.x version of patch:
-          http://issues.apache.org/bugzilla/attachment.cgi?id=18037
-       +1: rpluem, jim, niq
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ please place SVN revisions from trunk here, so it is easy to
     identify exactly what the proposed changes are!  Add all new
